Update helper script.